--- a/tpl/page.jade
+++ b/tpl/page.jade
@@ -1,15 +1,12 @@
-!!!
-html
-	head
-		title= "Real time web chat"
-		script(src='/chat.js')
-		script(src='/socket.io/socket.io.js')
-	body
-		#content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;')
-		.controls
-			| Name: 
-			input#name(style='width:350px;')
-			br
-			input#field(style='width:350px;')
-			input#send(type='button', value='send')
-			
+extends layout
+block content
+	div#page1(data-role='page')
+		div(data-theme='a',data-role='header')
+			h3 Realtime Polling
+		div(data-role='content')
+			textarea#chatBox(cols="40", rows="8")
+			input#name(placeholder="Name")
+			input#message(placeholder="Message")
+			a#send(data-role='button',value='send') Send
+		div(data-theme='a',data-role='footer',data-position='fixed')
+			h3 UCT Physics
