added student and lecturer view, highcharts

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -1,8 +1,11 @@
 extends layout
+block headerScripts
+	script(src='/lecturer.js')
+	
 block content
 	div#page1(data-role='page')
 		div(data-theme='a',data-role='header')
-			h3 Realtime Polling
+			h3 Realtime Polling (Lecturer View)
 		div(data-role='content')
 			textarea#chatBox(cols="40", rows="8")
 			input#name(placeholder="Name")
