--- a/tpl/layout.jade
+++ b/tpl/layout.jade
@@ -5,8 +5,9 @@ html
 		link(rel='stylesheet', href='/jquery/jquery.mobile-1.3.1.min.css')
 		script(src='/jquery/jquery-1.10.0.min.js')
 		script(src='/jquery/jquery.mobile-1.3.1.min.js')
-		script(src='/chat.js')
+		script(src='/highcharts/js/highcharts.js')
 		script(src='/socket.io/socket.io.js')
+		block headerScripts		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	body(class="ui-mobile-viewport ui-overlay-c")
 		block content
