pushing of polls connects to themed buttons

--- a/tpl/lecturerPopups.jade
+++ b/tpl/lecturerPopups.jade
@@ -3,6 +3,6 @@
 	p
 		input#pollName(placeholder="Poll Name")
 		label(for='sliderNumoptions') How many options:
-		input#sliderNumoptions(type='range', name='sliderNumoptions', value='5', min='0', max='10', data-highlight="true", data-mini="true")
+		input#sliderNumoptions(type='range', name='sliderNumoptions', value='3', min='2', max='5', data-highlight="true")
 		a#btnAcceptPoll(data-role='button',data-mini="true", onclick="CreatePoll();") Create
 		a#btnCancelPoll(data-rel="back", data-role="button", data-theme="b", data-transition="fade", data-mini="true") Cancel
