--- a/tpl/student.jade
+++ b/tpl/student.jade
@@ -7,6 +7,5 @@ block content
 		div(data-theme='a',data-role='header')
 			h3 Realtime Polling
 		div(data-role='content')
-			textarea#chatBox(cols="40", rows="8")
-			a#send(data-role='button',value='send') Send
+			div#poll
 		
