--- a/tpl/layout.jade
+++ b/tpl/layout.jade
@@ -2,7 +2,9 @@ doctype 5
 html
 	head
 		title= "Real time web chat"
-		link(rel='stylesheet', href='/jquery/jquery.mobile-1.3.1.min.css')
+		
+		link(rel='stylesheet', href='/jquery/extraSwatches.min.css')
+		link(rel='stylesheet', href='/jquery/jquery.mobile.structure-1.3.1.min.css')
 		script(src='/jquery/jquery-1.10.0.min.js')
 		script(src='/jquery/jquery.mobile-1.3.1.min.js')
 		script(src='/highcharts/js/highcharts.js')
