recording and display of results

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -7,7 +7,7 @@ block content
 		div(data-theme='a',data-role='header')
 			h3 Realtime Polling (Lecturer View)
 		div(data-role='content')
-			textarea#chatBox(cols="40", rows="8")
+			#resultsChart(data-role='content')
 			a#btnNewPoll(data-role='button') Create new poll
 			include lecturerPopups
 		
