one submission per IP, pushing of existing polls
limits each poll to one submission per IP, and handles errors relating
to duplicates.  implements pushing of existing polls when a client
connects.

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -9,5 +9,6 @@ block content
 		div(data-role='content')
 			#resultsChart(data-role='content')
 			a#btnNewPoll(data-role='button') Create new poll
+			a#btnNewPoll(data-role='button',visible=false) Close current poll
 			include lecturerPopups
 		
