--- a/tpl/lecturerPopups.jade
+++ b/tpl/lecturerPopups.jade
@@ -1,4 +1,4 @@
-#popupBasic(data-role='popup', data-position-to='#name', data-transition='fade', class='ui-content', style='max-width:280px')
+#popupPoll(data-role='popup', data-position-to='#name', data-transition='fade', class='ui-content', style='max-width:280px')
 	a.ui-btn-right(href='#', data-rel='back', data-role='button', data-theme='a', data-icon='delete', data-iconpos='notext') Close
 	p
 		input#pollName(placeholder="Poll Name")
