changed script and socket addresses for redirect (see readme

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -1,6 +1,6 @@
 extends layout
 block headerScripts
-	script(src='/lecturer.js')
+	script(src='/poll/lecturer.js')
 	
 block content
 	div#page1(data-role='page')
