--- a/tpl/layout.jade
+++ b/tpl/layout.jade
@@ -3,12 +3,12 @@ html
 	head
 		title= "Real time web chat"
 		
-		link(rel='stylesheet', href='/jquery/extraSwatches.min.css')
-		link(rel='stylesheet', href='/jquery/jquery.mobile.structure-1.3.1.min.css')
-		script(src='/jquery/jquery-1.10.0.min.js')
-		script(src='/jquery/jquery.mobile-1.3.1.min.js')
-		script(src='/highcharts/js/highcharts.js')
-		script(src='/socket.io/socket.io.js')
+		link(rel='stylesheet', href='/poll/jquery/extraSwatches.min.css')
+		link(rel='stylesheet', href='/poll/jquery/jquery.mobile.structure-1.3.1.min.css')
+		script(src='/poll/jquery/jquery-1.10.0.min.js')
+		script(src='/poll/jquery/jquery.mobile-1.3.1.min.js')
+		script(src='/poll/highcharts/js/highcharts.js')
+		script(src='/poll/socket.io/socket.io.js')
 		block headerScripts		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	body(class="ui-mobile-viewport ui-overlay-c")
