--- a/tpl/layout.jade
+++ b/tpl/layout.jade
@@ -8,6 +8,7 @@ html
 		script(src='/poll/jquery/jquery-1.10.0.min.js')
 		script(src='/poll/jquery/jquery.mobile-1.3.1.min.js')
 		script(src='/poll/highcharts/js/highcharts.js')
+		script(src='/poll/highcharts/js/modules/exporting.js')
 		script(src='/poll/socket.io/socket.io.js')
 		block headerScripts		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
