update to highcharts 3.0.2

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -6,7 +6,7 @@ block headerScripts
 block content
 	div#page1(data-role='page')
 		div(data-theme='a',data-role='header')
-			h3 Realtime Polling (Lecturer View)
+			h3 Real Time Polling (Lecturer View)
 		div(data-role='content')
 			#resultsChart(data-role='content')
 			a#btnNewPoll(data-role='button') Create new poll
