--- a/tpl/student.jade
+++ b/tpl/student.jade
@@ -6,7 +6,7 @@ block headerScripts
 block content
 	div#page1(data-role='page')
 		div(data-theme='a',data-role='header')
-			h3 Real Time Polling
+			h3 UCT PhysPoll
 		div(data-role='content')
 			include studentPopups
 			div(data-role='collapsible-set', data-theme='a', data-content-theme='b')
