--- a/tpl/layout.jade
+++ b/tpl/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
 	head
-		title= "Real time web chat"
+		title= "UCT PhysPoll"
 		
 		link(rel='stylesheet', href='/poll/jquery/extraSwatches.min.css')
 		link(rel='stylesheet', href='/poll/jquery/jquery.mobile.structure-1.3.1.min.css')
