fixed chrome / ie8 bug, added login button and animation

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -2,6 +2,7 @@ extends layout
 block headerScripts
 
 	script(src='/poll/util/md5-min.js')
+	script(src='/poll/util/dateFormat.js')
 	script(src='/poll/lecturer.js')	
 	script
 		room="#{room}";
@@ -9,8 +10,9 @@ block content
 	div#page1(data-role='page')
 		div(data-theme='a',data-role='header')
 			h3 UCT PhysPoll (Lecturer)
-		div(data-role='content')
+		div(data-role='content')			
+			a#btnOpenLogin(data-role='button', data-theme="b") Login
+			a#btnNewPoll(data-role='button', data-theme="b", class="ui-disabled") Create new poll			
 			#resultsChart(data-role='content')
-			a#btnNewPoll(data-role='button') Create new poll			
 			include lecturerPopups
 		
