manual refresh button for lecturer

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -12,6 +12,7 @@ block content
 			h3 UCT PhysPoll (Lecturer)
 		div(data-role='content')			
 			a#btnOpenLogin(data-role='button', data-theme="b") Login
+			a#btnUpdate(data-role='button', data-theme="b", class="ui-disabled") Update
 			a#btnNewPoll(data-role='button', data-theme="b", class="ui-disabled") Create new poll			
 			#resultsChart(data-role='content')
 			include lecturerPopups
