fix for deprecated jade code

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -4,7 +4,7 @@ block headerScripts
 	script(src='/poll/util/md5-min.js')
 	script(src='/poll/util/dateFormat.js')
 	script(src='/poll/lecturer.js')	
-	script
+	script.
 		room="#{room}";
 block content
 	div#page1(data-role='page')
