--- a/tpl/student.jade
+++ b/tpl/student.jade
@@ -1,7 +1,7 @@
 extends layout
 block headerScripts
 	script(src='/poll/student.js')
-	script
+	script.
 		room="#{room}";
 block content
 	div#page1(data-role='page')
