matched UI with webmarks project

--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -9,8 +9,9 @@ block headerScripts
 
 block content
 	div#page1(data-role='page')
-		div(data-theme='a',data-role='header')
-			h3 UCT PhysPoll (Lecturer)
+		div(data-theme='b',data-role='header')
+			div(align="center")
+				h3 UCT PhysPoll (Lecturer)
 		div(data-role='content')
 			a#btnOpenLogin(data-role='button', data-theme="b") Login
 			a#btnUpdate(data-role='button', data-theme="b", class="ui-disabled") Update
