--- a/tpl/student.jade
+++ b/tpl/student.jade
@@ -5,8 +5,9 @@ block headerScripts
 		room="#{room}";
 block content
 	div#page1(data-role='page')
-		div(data-theme='a',data-role='header')
-			h3 UCT PhysPoll
+		div(data-theme='b',data-role='header')
+			div(align="center")
+				h3 UCT PhysPoll
 		div(data-role='content')
 			include studentPopups
 			div(data-role='collapsible-set', data-theme='a', data-content-theme='b')
