fixed poll redirect

--- a/tpl/layout.jade
+++ b/tpl/layout.jade
@@ -2,12 +2,12 @@ doctype html
 html
 	head
 		title= "UCT QuickPoll"				
-		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
-		link(rel='stylesheet', href='/flat-ui/css/modules_flat-ui.min.css')
-		link(rel='stylesheet', href='/flat-ui/css/extra.css')
-		script(src='/jquery/jquery-1.11.1.min.js')
-		script(src='/flat-ui/js/flat-ui.min.js')
-		script(src='/socket.io/socket.io.js')
+		link(rel='stylesheet', href='/poll/bootstrap/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/poll/flat-ui/css/modules_flat-ui.min.css')
+		link(rel='stylesheet', href='/poll/flat-ui/css/extra.css')
+		script(src='/poll/jquery/jquery-1.11.1.min.js')
+		script(src='/poll/flat-ui/js/flat-ui.min.js')
+		script(src='/poll/socket.io/socket.io.js')
 		block headerScripts
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	body(class="ui-mobile-viewport ui-overlay-c")
