--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -3,11 +3,11 @@ extends layout
 block headerScripts
 	script.
 		room="#{room}";
-	script(src='/highcharts/js/highcharts-custom.js')
-	script(src='/util/dateFormat.js')
-	script(src='/util/slider.js')
-	script(src='/util/md5-min.js')
-	script(src='/lecturer.js')
+	script(src='/poll/highcharts/js/highcharts-custom.js')
+	script(src='/poll/util/dateFormat.js')
+	script(src='/poll/util/slider.js')
+	script(src='/poll/util/md5-min.js')
+	script(src='/poll/lecturer.js')
 block content
 	div(class='navbar navbar-default', role = 'navigation')
 		.container
