--- a/tpl/student.jade
+++ b/tpl/student.jade
@@ -1,6 +1,6 @@
 extends layout
 block headerScripts	
-	script(src='/student.js')
+	script(src='/poll/student.js')
 	script.
 		room="#{room}";
 block content
