--- a/tpl/lecturer.jade
+++ b/tpl/lecturer.jade
@@ -63,7 +63,7 @@ block content
 							.col-xs-12.col-sm-9.col-md-9.col-lg-10
 								input#options(data-slider-id='optionsSlider',type="text",data-slider-min="2",data-slider-max="8",data-slider-step="1",data-slider-value="4" data-slider-tooltip="hide" data-slider-handle="square")
 						.row
-							.col-xs-6.col-md-2.col-sm-4
+							.col-xs-12.col-md-2.col-sm-6.pad5v
 								button#btnAcceptPoll.btn.btn-block.btn-success Create
-							.col.xs-6.col-md-2.col-sm-4
+							.col-xs-12.col-md-2.col-sm-6.pad5v
 								button#btnCancelPoll.btn.btn-block.btn-danger Cancel
