error handling for mongo disconnect

--- a/tpl/metrics.jade
+++ b/tpl/metrics.jade
@@ -33,7 +33,11 @@ block content
 				#alertAuthError.alert.alert-danger(role='alert', style='display:none')
 					span.glyphicon.glyphicon-remove.pad7h
 					span
-						|Authentication error	
+						|Authentication error
+				#alertDBError.alert.alert-danger(role='alert', style='display:none')
+					span.glyphicon.glyphicon-remove.pad7h
+					span
+						|Problem accessing metrics database. Please contact the administrator
 	.container-fluid
 		.row
 			.col-xs-12.bottom15
