--- a/sass/_variables_site.scss
+++ b/sass/_variables_site.scss
@@ -1,6 +1,7 @@
-﻿$ui-border-radius: 3px;
-
-$brand-default: #bdc3c7;
+﻿$navbar-border-radius: 0px;
+$ui-border-radius: 3px;
+$navbar-height: 48px;
+$brand-default: lighten($brand-primary, 30);
 $brand-inverse: #23405e;
 $brand-disabled: #bdc3c7;
 $brand-paneltext: white;
