--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -14,7 +14,7 @@ block content
 		.container
 			.navbar-header
 				.navbar-brand
-					span.glyphicon.glyphicon-pencil.pad10h
+					span.glyphicon.glyphicon-pencil
 					|UCT QuickPoll (Metrics)
 	.container
 		.row
@@ -38,7 +38,7 @@ block content
 					span.glyphicon.glyphicon-remove.pad7h
 					span
 						|Problem accessing metrics database. Please contact the administrator
-	.container-fluid
+	.container
 		.row
 			.col-xs-12.bottom15
 				#deptDistChart(data-role='content')
