--- a/views/student.jade
+++ b/views/student.jade
@@ -9,7 +9,7 @@ block content
 		.container
 			.navbar-header
 				.navbar-brand
-					span.glyphicon.glyphicon-pencil.pad10h
+					span.glyphicon.glyphicon-pencil
 					|UCT QuickPoll
 	.container
 		.row
