updated metrics tracking (responses)

--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -48,9 +48,16 @@ block content
 		.row
 			.col-xs-12.bottom15
 				#roomDistChart(data-role='content')
-		.row
-			.col-xs-12.bottom15
+		.row.bottom15
+			.col-xs-12.col-sm-6.bottom15
+				#lecturePeriodChart(data-role='content')
+			.col-xs-12.col-sm-6.bottom15
+				#lecturePeriodResponseChart(data-role='content')
+		.row.bottom15
+			.col-xs-12.col-sm-6.bottom15
 				#dayOfWeekChart(data-role='content')
+			.col-xs-12.col-sm-6.bottom15
+				#dayOfWeekResponseChart(data-role='content')
 		.row
 			.col-xs-12.bottom15
 				#monthOfYearChart(data-role='content')
