error bars for bar charts

--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -6,6 +6,7 @@ block headerScripts
 		socketPort="#{socketPort}";
 		dept="#{dept}";
 	script(src='http://code.highcharts.com/highcharts.js')
+	script(src='http://code.highcharts.com/highcharts-more.js')
 	script(src='/js/util/dateFormat.js')
 	script(src='/js/util/md5-min.js')
 	script(src='/js/metrics.js')
