week of year charts

--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -60,5 +60,12 @@ block content
 			.col-xs-12.col-sm-6.bottom15
 				#dayOfWeekResponseChart(data-role='content')
 		.row
-			.col-xs-12.bottom15
+			.col-xs-12.col-sm-6.bottom15
+				#weekOfYearChart(data-role='content')
+			.col-xs-12.col-sm-6.bottom15
+				#weekOfYearResponseChart(data-role='content')
+		.row
+			.col-xs-12.col-sm-6.bottom15
 				#monthOfYearChart(data-role='content')
+			.col-xs-12.col-sm-6.bottom15
+				#monthOfYearResponseChart(data-role='content')
