--- a/views/lecturer.jade
+++ b/views/lecturer.jade
@@ -64,7 +64,7 @@ block content
 			.col-xs-4.col-sm-4.col-md-3
 				button#btnReAuth.btn.btn-block.btn-warning Re-authenticate
 			.col-xs-4.col-sm-4.col-md-3
-				button#btnReAuth.btn.btn-block.btn-warning Close poll
+				button#btnReAuth.btn.btn-block.btn-danger Close poll
 		.row
 			.col-xs-12
 				#pollPanel.panel.panel-primary(style='display:none')
